--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,39 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+
+# Python
+*.pyc
+__pycache__/
+*.pyd
+*.so
+
+# Virtual Environment
+venv/
+.venv/
+env/
+.env/
+
+# Database
+db.sqlite3
+
+# Sensitive Information
+.env
+settings_local.py
+
+# Media and Static Files
+media/
+staticfiles/
+
+# IDE/Editor specific
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*.swp
+*.swo
+
+# Logs and temporary files
+*.log
+tmp/
